--- a/Solar - Prospect PF/Solar - Prospect PF.csproj
+++ b/Solar - Prospect PF/Solar - Prospect PF.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.0"/>
     <PackageReference Include="Selenium.Support" Version="4.16.2"/>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0"/>
+    <PackageReference Include="DotNetSeleniumExtras.PageObjects" Version="3.11.0"/>
   </ItemGroup>
 </Project>
